--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head><title>vinfo</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="description" content="vinfo - bitrate analyzer for Audio file">
+<meta name="description" content="vinfo - Bitrate analyzer for audio file">
 <meta name="keywords" content="Ogg,Vorbis,FLAC,Opus,MP3,AAC,Sound,Audio,Software">
 <link rel="stylesheet" href="default.css" type="text/css"></head>
 
-<body alink="#ee0000" link="#0000ee" vlink="#551a8b"><h1>vinfo - bitrate analyzer for Audio file</h1>
+<body alink="#ee0000" link="#0000ee" vlink="#551a8b"><h1>vinfo - Bitrate analyzer for audio file</h1>
 <ul></ul>
 <span style="font-weight: bold;">This tool is for
 displaying the information in the vorbis, opus, (ogg)flac and/or other
